# APPUI

./: .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
appui/: __init__.py  cli.py  config.py  models.py  runtime.py  server.py
appui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
appui/dsl/: __init__.py  components.py
appui/static/: index.html
appui/static/assets/: index-C0GsY3M2.css  index-CF6pomm-.js  index-rPKeyKM8.js
backend/: main.py  requirements.txt
backend/app/: app_runtime.py  example.py  models.py  server.py
backend/app/dsl/: __init__.py  components.py
examples/: app.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css
frontend/src/renderer/: App.tsx  Icon.tsx  types.ts  ws.ts
tests/: test_server.py
