[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appui"
version = "0.1.0"
description = "Reactive UI framework: Python DSL + FastAPI + React renderer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "APPUI Authors" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/your-org/appui"
Source = "https://github.com/your-org/appui"

[project.scripts]
appui = "appui.cli:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
appui = ["static/**/*", "py.typed"]

[tool.setuptools.packages.find]
include = ["appui*"]
exclude = ["backend*", "frontend*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests",
]


